--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/leaflet-groupedlayercontrol": "^0.6.4",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "leaflet.vectorgrid": "^1.3.0",
